fixed the actual toggle, dark mode now working

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+.Dark {
+  background-color: #333;
+  color: #fff;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
